--- a/contact.html
+++ b/contact.html
@@ -72,7 +72,7 @@
 
     <!--BOOKING FORM-->
 
-    <div class="form-frame" id="contact" class="form-frame">
+    <div class="form-frame" id="contact">
       <form action="/action_page.php" method="post">
         <h2 id="form">Form for booking</h2>
         <div class="container">
