--- a/about.html
+++ b/about.html
@@ -61,7 +61,7 @@
 
   <!--OUR STORY--> 
   <section>
-    <div class="container center content form-frame" id="mg" style="max-width:900px">
+    <div class="container center content cook-frame" id="mg" style="max-width:900px">
       
       <div class="section-about">
         <h2 class="name">Melania Greentree</h2>
